# siamang

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-COMMERCIAL.md  MANIFEST.in  MANUAL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md  cookbook.md  getting-started.md  index.md
docs/reference/: core.md  deploy.md  frontend.md  reporting_design.md
examples/full_pipeline/: .gitignore  README.md  full_pipeline_demo.ipynb  survey_preview.html
scripts/: build_react_bundle.py
siamang/: __init__.py  local_simulator.py
siamang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
siamang/cli/: entry.py  init.py  loader.py  preview.py
siamang/config/: __init__.py  loader.py  secrets.py
siamang/core/: block.py  expression.py  filter_rule.py  media.py  option.py  question.py  questionnaire.py  quota.py  script.py  serialization.py  variable.py
siamang/data/: analysis.py  survey_data.py  tables.py
siamang/deploy/: base.py  pipeline.py  registry.py  result.py
siamang/deploy/backends/: gsheets.py  local.py  supabase.py
siamang/deploy/frontends/: local.py  netlify.py  vercel.py
siamang/frontend/: builder.py  bundle.py
siamang/frontend/client/: __init__.py  gsheets.py
siamang/frontend/compiler/: react.py  schema.py
siamang/frontend/runtime/: base.py  react.py  surveyjs.py
siamang/frontend/templates/: index.html.tpl
siamang/frontend/theme/: css.py  presets.py  ui_config.py
siamang/io/: __init__.py  dictionary.py  spss.py  stata.py
siamang/reporting/: __init__.py  accessors.py  charts.py  tables.py
tests/: __init__.py  test_adapters.py  test_reporting.py
wiki/: API-Reference-Index.md  Analysis.md  Banner-Tables.md  CLI-Reference.md  Cloud-Account-and-Security.md  Cloud-Analysis-and-Reporting.md  Cloud-Architecture.md  Cloud-CI-CD-and-Testing.md  Cloud-Configuration.md  Cloud-Connectors.md  Cloud-Contributing.md  Cloud-Data-Model-and-Migrations.md  Cloud-Deploying-a-Survey.md  Cloud-Deployment.md  Cloud-Domain-Model.md  Cloud-Engine-Plugin.md  Cloud-FAQ-and-Troubleshooting.md  Cloud-Organizations-and-Team.md  Cloud-Overview.md  Cloud-Quick-Start.md  Cloud-REST-API.md  Cloud-Repository-and-Editing.md  Cloud-Roadmap.md  Cloud-Sandbox-and-Security.md  Cloud-Self-Hosted-Trials.md  Cloud-Subscription-Tiers.md  Cloud-Survey-Lifecycle.md  Cloud-Viewing-and-Exporting-Data.md  Cloud-Web-App.md  Cloud-Your-First-Project.md  Cloud-siamang-yaml.md  Contributing.md  Cookbook.md  Core-Concepts.md  Data-Import-and-Export.md  Deployment.md  Frontend-and-Theming.md  Home.md  Installation.md  Pages-Blocks-and-Structure.md  (+17 more)
